[css-grid] Move grid-item-alignment tests to WPT folder https://bugs.webkit.org/show_bug.cgi?id=206831
Patch by Rossana Monteriso <rmonteriso@igalia.com> on 2020-01-30
Reviewed by Javier Fernandez.

LayoutTests/imported/w3c:

Add grid-item-alignment tests, checked and adapted, to WPT.
Add .thirdRowFirstColumn class to grid.css support file and update all tests using this class by removing the duplicated class
from their <style> section.
Imported to WPT with this PR: https://github.com/web-platform-tests/wpt/pull/21440

* web-platform-tests/css/css-grid/alignment/grid-align-content-distribution-vertical-lr.html:
* web-platform-tests/css/css-grid/alignment/grid-align-content-distribution-vertical-rl.html:
* web-platform-tests/css/css-grid/alignment/grid-align-content-distribution.html:
* web-platform-tests/css/css-grid/alignment/grid-align-justify-overflow.html:
* web-platform-tests/css/css-grid/alignment/grid-item-alignment-with-orthogonal-flows-expected.txt: Added.
* web-platform-tests/css/css-grid/alignment/grid-item-alignment-with-orthogonal-flows-vertical-lr-expected.txt: Added.
* web-platform-tests/css/css-grid/alignment/grid-item-alignment-with-orthogonal-flows-vertical-rl-expected.txt: Added.
* web-platform-tests/css/css-grid/alignment/grid-item-alignment-with-orthogonal-flows-vertical-lr.html: Added.
* web-platform-tests/css/css-grid/alignment/grid-item-alignment-with-orthogonal-flows-vertical-rl.html: Added.
* web-platform-tests/css/css-grid/alignment/grid-item-alignment-with-orthogonal-flows.html: Added.
* web-platform-tests/css/support/grid.css:
(.thirdRowFirstColumn):

LayoutTests:

Remove from css-grid-layout folder some grid-item-alignment tests, that are being replaced by adapted tests in the corresponding WPT test folder.

* fast/css-grid-layout/grid-item-alignment-with-orthogonal-flows-expected.txt: Removed.
* fast/css-grid-layout/grid-item-alignment-with-orthogonal-flows-vertical-lr-expected.txt: Removed.
* fast/css-grid-layout/grid-item-alignment-w

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,19 @@
+2020-01-30  Rossana Monteriso  <rmonteriso@igalia.com>
+
+        [css-grid] Move grid-item-alignment tests to WPT folder
+        https://bugs.webkit.org/show_bug.cgi?id=206831
+
+        Reviewed by Javier Fernandez.
+
+        Remove from css-grid-layout folder some grid-item-alignment tests, that are being replaced by adapted tests in the corresponding WPT test folder.
+
+        * fast/css-grid-layout/grid-item-alignment-with-orthogonal-flows-expected.txt: Removed.
+        * fast/css-grid-layout/grid-item-alignment-with-orthogonal-flows-vertical-lr-expected.txt: Removed.
+        * fast/css-grid-layout/grid-item-alignment-with-orthogonal-flows-vertical-lr.html: Removed.
+        * fast/css-grid-layout/grid-item-alignment-with-orthogonal-flows-vertical-rl-expected.txt: Removed.
+        * fast/css-grid-layout/grid-item-alignment-with-orthogonal-flows-vertical-rl.html: Removed.
+        * fast/css-grid-layout/grid-item-alignment-with-orthogonal-flows.html: Removed.
+
 2020-01-29  Ryosuke Niwa  <rniwa@webkit.org>
 
         REGRESSION: [Mac wk1] imported/w3c/web-platform-tests/mathml/presentation-markup/scripts/underover-parameters-3.html is a flakey failure
