REGRESSION (r254406): Gmail.com star/favorite icons are not rendering https://bugs.webkit.org/show_bug.cgi?id=206909
Reviewed by Simon Fraser.

Source/WebCore:

Make image-set parsing more conservative, for backwards compatibility:
- Differentiate between image-set and -webkit-image-set when parsing, -webkit-image-set maintains old behavior.
- Don't allow empty urls when using raw strings, e.g. image-set('' 1x) is invalid.

Tests updated: fast/css/image-set-parsing.html.

* css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::consumeImageSet):
(WebCore::CSSPropertyParserHelpers::consumeImage):

LayoutTests:

Added empty URLs and new syntax with prefixed image-set to invalid tests.
Modified valid image-set parsing test to separate prefixed/non-prefixed.

* fast/css/image-set-parsing-generated.html:
* fast/css/image-set-parsing-invalid-expected.txt:
* fast/css/image-set-parsing-invalid.html:
* fast/css/image-set-parsing.html:


Canonical link: https://commits.webkit.org/220006@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255420 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,18 @@
+2020-01-30  Noam Rosenthal  <noam@webkit.org>
+
+        REGRESSION (r254406): Gmail.com star/favorite icons are not rendering
+        https://bugs.webkit.org/show_bug.cgi?id=206909
+
+        Reviewed by Simon Fraser.
+
+        Added empty URLs and new syntax with prefixed image-set to invalid tests.
+        Modified valid image-set parsing test to separate prefixed/non-prefixed.
+
+        * fast/css/image-set-parsing-generated.html:
+        * fast/css/image-set-parsing-invalid-expected.txt:
+        * fast/css/image-set-parsing-invalid.html:
+        * fast/css/image-set-parsing.html:
+
 2020-01-30  Rossana Monteriso  <rmonteriso@igalia.com>
 
         [css-grid] Move grid-item-alignment tests to WPT folder
