--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-01-30  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        REGRESSION(r253636): [GTK] Mouse cursor changes using onMouseXYZ are erratic
+        https://bugs.webkit.org/show_bug.cgi?id=206454
+
+        Reviewed by Tim Horton.
+
+        * platform/gtk/TestExpectations:
+
 2020-01-30  Noam Rosenthal  <noam@webkit.org>
 
         REGRESSION (r254406): Gmail.com star/favorite icons are not rendering
