--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,14 @@
+2020-01-30  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        REGRESSION(r253636): [GTK] Mouse cursor changes using onMouseXYZ are erratic
+        https://bugs.webkit.org/show_bug.cgi?id=206454
+
+        Reviewed by Tim Horton.
+
+        Since r253636 only platforms defining HAVE_NSCURSOR claim to support setting the cursor.
+
+        * WebProcess/WebCoreSupport/WebChromeClient.h: Do not implement supportsSettingCursor() for GTK port either.
+
 2020-01-29  Tim Horton  <timothy_horton@apple.com>
 
         REGRESSION (r255322): macCatalyst: Tapping in an input field doesn't change the selection location
