--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-01-30  Jacob Uphoff  <jacob_uphoff@apple.com>
+
+        [ macOS wk2 ] webrtc/video-autoplay.html is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=207001
+
+        Unreviewed test gardening
+
+        * platform/mac-wk2/TestExpectations:
+
 2020-01-30  youenn fablet  <youenn@apple.com>
 
         [Cocoa] Use AVAssetWriterDelegate to implement MediaRecorder
