--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,16 @@
+2020-01-30  Chris Dumez  <cdumez@apple.com>
+
+        [ Mac ] fast/dom/Window/post-message-crash.html is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=206949
+        <rdar://problem/58997453>
+
+        Unreviewed, fix fast/dom/Window/post-message-crash.html test to stop failing if it takes more than 50ms to run
+        and unskip on all platforms.
+
+        * fast/dom/Window/post-message-crash.html:
+        * platform/ios-wk2/TestExpectations:
+        * platform/mac/TestExpectations:
+
 2020-01-30  Jacob Uphoff  <jacob_uphoff@apple.com>
 
         [ macOS wk2 ] webrtc/video-autoplay.html is flaky failing
