--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,16 @@
+2020-01-30  Brent Fulgham  <bfulgham@apple.com>
+
+        [iOS] Remove report rule for 'com.apple.runningboard' from the Network and GPU process sandboxes
+        https://bugs.webkit.org/show_bug.cgi?id=206980
+        <rdar://problem/58900030>
+
+        Reviewed by Maciej Stachowiak.
+
+        Remove the logging now that we have useful backtraces.
+
+        * Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb:
+        * Resources/SandboxProfiles/ios/com.apple.WebKit.Networking.sb:
+
 2020-01-30  youenn fablet  <youenn@apple.com>
 
         [Cocoa] Use AVAssetWriterDelegate to implement MediaRecorder
