--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-01-30  Jason Lawrence  <lawrence.j@apple.com>
+
+        [ iOS wk2 ] imported/w3c/web-platform-tests/FileAPI/historical.https.html is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=207002
+
+        Unreviewed test gardening.
+
+        * platform/ios-simulator-wk2/TestExpectations:
+
 2020-01-30  Chris Dumez  <cdumez@apple.com>
 
         [ Mac ] fast/dom/Window/post-message-crash.html is flaky failing
