--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2020-01-30  Jacob Uphoff  <jacob_uphoff@apple.com>
+
+        [ macOS wk2 ] tiled-drawing/scrolling/scroll-snap/scroll-snap-mandatory-overflow.html is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=207003
+
+        Unreviewed test gardening.
+
+        * platform/mac-wk2/TestExpectations:
+
 2020-01-30  Jason Lawrence  <lawrence.j@apple.com>
 
         [ iOS wk2 ] imported/w3c/web-platform-tests/FileAPI/historical.https.html is flaky failing
