TestWebKitAPI: Re-baseline AccessibilityTests for Catalyst https://bugs.webkit.org/show_bug.cgi?id=206997
Reviewed by Wenson Hsieh.

* TestWebKitAPI/Tests/ios/AccessibilityTestsIOS.mm:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/220018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255436 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,13 @@
+2020-01-30  Jonathan Bedard  <jbedard@apple.com>
+
+        TestWebKitAPI: Re-baseline AccessibilityTests for Catalyst
+        https://bugs.webkit.org/show_bug.cgi?id=206997
+
+        Reviewed by Wenson Hsieh.
+
+        * TestWebKitAPI/Tests/ios/AccessibilityTestsIOS.mm:
+        (TestWebKitAPI::TEST):
+
 2020-01-29  Jonathan Bedard  <jbedard@apple.com>
 
         run-safari / run-webkit-tests --ios-simulator not working with XCode 13.3.1 (11C504)
