Crash in RenderBlockFlow::adjustLinePositionForPagination() with complex line without root box https://bugs.webkit.org/show_bug.cgi?id=206610
Patch by Doug Kelly <dougk@apple.com> on 2020-01-30
Reviewed by Zalan Bujtas.

Source/WebCore:

Add a check for a null pointer when getting firstRootBox() -- if it is null, return early after calling setPaginationStrut().

Test: fast/text/complex-without-root-box.html

* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::adjustLinePositionForPagination):

LayoutTests:

* fast/text/complex-without-root-box-expected.txt: Added.
* fast/text/complex-without-root-box.html: Added.

Canonical link: https://commits.webkit.org/220019@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255437 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,13 @@
+2020-01-30  Doug Kelly  <dougk@apple.com>
+
+        Crash in RenderBlockFlow::adjustLinePositionForPagination() with complex line without root box
+        https://bugs.webkit.org/show_bug.cgi?id=206610
+
+        Reviewed by Zalan Bujtas.
+
+        * fast/text/complex-without-root-box-expected.txt: Added.
+        * fast/text/complex-without-root-box.html: Added.
+
 2020-01-30  Jacob Uphoff  <jacob_uphoff@apple.com>
 
         [ macOS wk2 ] tiled-drawing/scrolling/scroll-snap/scroll-snap-mandatory-overflow.html is flaky failing
