Crash in RenderElement::selectionPseudoStyle with detail element set to display: contents https://bugs.webkit.org/show_bug.cgi?id=206705
Patch by Doug Kelly <dougk@apple.com> on 2020-01-30
Reviewed by Zalan Bujtas.

Source/WebCore:

Check the element for a valid renderer before calling getUncachedPseudoStyle(), and if the
element is set to "display: contents", walk up to the parent element until we're at the root
or the element is not set to "display: contents".

Test: fast/css/display-contents-detail-selection.html

* rendering/RenderElement.cpp:
(WebCore::RenderElement::selectionPseudoStyle const):

LayoutTests:

* fast/css/display-contents-detail-selection-expected.txt: Added.
* fast/css/display-contents-detail-selection.html: Added.

Canonical link: https://commits.webkit.org/220024@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255448 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,13 @@
+2020-01-30  Doug Kelly  <dougk@apple.com>
+
+        Crash in RenderElement::selectionPseudoStyle with detail element set to display: contents
+        https://bugs.webkit.org/show_bug.cgi?id=206705
+
+        Reviewed by Zalan Bujtas.
+
+        * fast/css/display-contents-detail-selection-expected.txt: Added.
+        * fast/css/display-contents-detail-selection.html: Added.
+
 2020-01-30  Truitt Savell  <tsavell@apple.com>
 
         [ Mac ] fast/history/page-cache-webdatabase-pending-transaction.html is timing out
