--- a/Source/JavaScriptCore/ChangeLog
+++ b/Source/JavaScriptCore/ChangeLog
@@ -1,3 +1,19 @@
+2020-01-30  Yusuke Suzuki  <ysuzuki@apple.com>
+
+        [JSC] Make SourceProviderCacheItem small
+        https://bugs.webkit.org/show_bug.cgi?id=206987
+
+        Reviewed by Mark Lam.
+
+        We know this becomes very large when parsing a large script, and it is noticeable in some of RAMification tests.
+        We should use PackedPtr to shrink size of SourceProviderCacheItem.
+
+        * parser/Parser.h:
+        (JSC::Scope::restoreFromSourceProviderCache):
+        * parser/SourceProviderCacheItem.h:
+        (JSC::SourceProviderCacheItem::usedVariables const):
+        (JSC::SourceProviderCacheItem::SourceProviderCacheItem):
+
 2020-01-30  Keith Miller  <keith_miller@apple.com>
 
         Parser needs to restore unary stack state when backtracking
