Incomplete braced quantifiers should be banned in Unicode patterns only https://bugs.webkit.org/show_bug.cgi?id=206776
Reviewed by Darin Adler.

JSTests:

Although the change does not affect Unicode property escapes, a few
test/built-ins/RegExp/property-escapes/non-existent-property-value*.js files
are now passing because they had \\p or \\P instead of CharacterClassEscape.

* test262/expectations.yaml: Mark 18 test cases as passing.

Source/JavaScriptCore:

This change adds SyntaxError for Unicode patterns, aligning JSC with
V8 and SpiderMonkey, and also capitalizes "Unicode" in error messages.

Grammar: https://tc39.es/ecma262/#prod-annexB-Term
(/u flag precludes the use of ExtendedAtom and thus InvalidBracedQuantifier)

* yarr/YarrErrorCode.cpp:
(JSC::Yarr::errorMessage):
(JSC::Yarr::errorToThrow):
* yarr/YarrErrorCode.h:
* yarr/YarrParser.h:
(JSC::Yarr::Parser::parseTokens):

LayoutTests:

An error message test is added for this change and for webkit.org/b/206768.
Other tests are adjusted for capitalized "Unicode" in error messages.

* js/regexp-named-capture-groups-expected.txt:
* js/regexp-unicode-expected.txt:
* js/regress-158080-expected.txt:
* js/script-tests/regexp-named-capture-groups.js:
* js/script-tests/regexp-unicode.js:


Canonical link: https://commits.webkit.org/220026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255452 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JSTests/ChangeLog
+++ b/JSTests/ChangeLog
@@ -1,3 +1,16 @@
+2020-01-30  Alexey Shvayka  <shvaikalesh@gmail.com>
+
+        Incomplete braced quantifiers should be banned in Unicode patterns only
+        https://bugs.webkit.org/show_bug.cgi?id=206776
+
+        Reviewed by Darin Adler.
+
+        Although the change does not affect Unicode property escapes, a few
+        test/built-ins/RegExp/property-escapes/non-existent-property-value*.js files
+        are now passing because they had \\p or \\P instead of CharacterClassEscape.
+
+        * test262/expectations.yaml: Mark 18 test cases as passing.
+
 2020-01-30  Keith Miller  <keith_miller@apple.com>
 
         Parser needs to restore unary stack state when backtracking
@@ -85,7 +98,7 @@
 
 2020-01-26  Alexey Shvayka  <shvaikalesh@gmail.com>
 
-        Invalid ranges in character classes should be banned in unicode patterns
+        Invalid ranges in character classes should be banned in Unicode patterns only
         https://bugs.webkit.org/show_bug.cgi?id=206768
 
         Reviewed by Darin Adler.
