--- a/Source/JavaScriptCore/ChangeLog
+++ b/Source/JavaScriptCore/ChangeLog
@@ -1,3 +1,23 @@
+2020-01-30  Alexey Shvayka  <shvaikalesh@gmail.com>
+
+        Incomplete braced quantifiers should be banned in Unicode patterns only
+        https://bugs.webkit.org/show_bug.cgi?id=206776
+
+        Reviewed by Darin Adler.
+
+        This change adds SyntaxError for Unicode patterns, aligning JSC with
+        V8 and SpiderMonkey, and also capitalizes "Unicode" in error messages.
+
+        Grammar: https://tc39.es/ecma262/#prod-annexB-Term
+        (/u flag precludes the use of ExtendedAtom and thus InvalidBracedQuantifier)
+
+        * yarr/YarrErrorCode.cpp:
+        (JSC::Yarr::errorMessage):
+        (JSC::Yarr::errorToThrow):
+        * yarr/YarrErrorCode.h:
+        * yarr/YarrParser.h:
+        (JSC::Yarr::Parser::parseTokens):
+
 2020-01-30  Yusuke Suzuki  <ysuzuki@apple.com>
 
         [JSC] Make SourceProviderCacheItem small
@@ -380,17 +400,17 @@
 
 2020-01-26  Alexey Shvayka  <shvaikalesh@gmail.com>
 
-        Invalid ranges in character classes should be banned in unicode patterns
+        Invalid ranges in character classes should be banned in Unicode patterns only
         https://bugs.webkit.org/show_bug.cgi?id=206768
 
         Reviewed by Darin Adler.
 
         In ES5, grammar of CharacterRange was ambiguous, resulting in invalid ranges
         like /[\d-a]/ being allowed. As of ES2015, invalid ranges are SyntaxError in
-        unicode patterns, yet still allowed in regular ones to avoid breaking the web.
+        Unicode patterns, yet still allowed in regular ones to avoid breaking the web.
         (https://tc39.es/ecma262/#sec-patterns-static-semantics-early-errors-annexb)
 
-        This change adds SyntaxError for unicode patterns and updates explanatory
+        This change adds SyntaxError for Unicode patterns and updates explanatory
         comments. ErrorCode::CharacterClassOutOfOrder is renamed for consistency
         with newly added error code and ErrorCode::ParenthesesTypeInvalid.
 
