PAL: Remove old iOS version macros https://bugs.webkit.org/show_bug.cgi?id=206905
Reviewed by Darin Adler.

Source/WebCore:

No functional changes, covered by existing tests.

* loader/archive/cf/LegacyWebArchiveMac.mm: Remove USE(SECURE_ARCHIVER_API).
* testing/cocoa/WebArchiveDumpSupport.mm: Ditto.

Source/WebCore/PAL:

* pal/cocoa/AVFoundationSoftLink.mm: Remove iOS 13 version checks.
* pal/spi/cf/CFNetworkSPI.h: Remove iOS 11 version checks.
* pal/spi/cg/CoreGraphicsSPI.h: Use HAVE macro instead of version checks.
* pal/spi/cocoa/IOSurfaceSPI.h: Remove iOS 11 version checks.
* pal/spi/cocoa/NSKeyedArchiverSPI.h: Remove USE(SECURE_ARCHIVER_API) and
USE(SECURE_ARCHIVER_FOR_ATTRIBUTED_STRING).
* pal/spi/cocoa/NSProgressSPI.h: Replace USE(NSPROGRESS_PUBLISHING_SPI) with
HAVE(NSPROGRESS_PUBLISHING_SPI).
* pal/spi/ios/MediaPlayerSPI.h: Remove iOS 11 version checks.

Source/WebKit:

* NetworkProcess/Downloads/cocoa/DownloadCocoa.mm: Remove USE(NSPROGRESS_PUBLISHING_SPI)
* NetworkProcess/Downloads/cocoa/WKDownloadProgress.mm: Ditto.

Source/WTF:

* wtf/PlatformHave.h: Add HAVE(NSPROGRESS_PUBLISHING_SPI).

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/DownloadProgress.mm: Remove USE(NSPROGRESS_PUBLISHING_SPI)
with HAVE(NSPROGRESS_PUBLISHING_SPI)


Canonical link: https://commits.webkit.org/220027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255455 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/PAL/ChangeLog
+++ b/Source/WebCore/PAL/ChangeLog
@@ -1,3 +1,20 @@
+2020-01-30  Jonathan Bedard  <jbedard@apple.com>
+
+        PAL: Remove old iOS version macros
+        https://bugs.webkit.org/show_bug.cgi?id=206905
+
+        Reviewed by Darin Adler.
+
+        * pal/cocoa/AVFoundationSoftLink.mm: Remove iOS 13 version checks.
+        * pal/spi/cf/CFNetworkSPI.h: Remove iOS 11 version checks.
+        * pal/spi/cg/CoreGraphicsSPI.h: Use HAVE macro instead of version checks.
+        * pal/spi/cocoa/IOSurfaceSPI.h: Remove iOS 11 version checks.
+        * pal/spi/cocoa/NSKeyedArchiverSPI.h: Remove USE(SECURE_ARCHIVER_API) and
+        USE(SECURE_ARCHIVER_FOR_ATTRIBUTED_STRING).
+        * pal/spi/cocoa/NSProgressSPI.h: Replace USE(NSPROGRESS_PUBLISHING_SPI) with
+        HAVE(NSPROGRESS_PUBLISHING_SPI).
+        * pal/spi/ios/MediaPlayerSPI.h: Remove iOS 11 version checks.
+
 2020-01-30  Ryan Haddad  <ryanhaddad@apple.com>
 
         Unreviewed, rolling out r255424.
