--- a/Source/WTF/ChangeLog
+++ b/Source/WTF/ChangeLog
@@ -1,3 +1,12 @@
+2020-01-30  Jonathan Bedard  <jbedard@apple.com>
+
+        PAL: Remove old iOS version macros
+        https://bugs.webkit.org/show_bug.cgi?id=206905
+
+        Reviewed by Darin Adler.
+
+        * wtf/PlatformHave.h: Add HAVE(NSPROGRESS_PUBLISHING_SPI).
+
 2020-01-28  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] Should use light theme unless website declares support for dark themes in color-schemes property
