[iOS] Issue mach sandbox extension to the frontboard and icon service when the attachment element is enabled https://bugs.webkit.org/show_bug.cgi?id=205443 Source/WebCore:
Reviewed by Brent Fulgham.

Get focus ring color in the UI process since getting this color will communicate with the frontboard daemon.

Test: fast/sandbox/ios/focus-ring-color.html

* rendering/RenderTheme.h:
* rendering/RenderThemeIOS.h:
* rendering/RenderThemeIOS.mm:
(WebCore::cachedFocusRingColor):
(WebCore::RenderThemeIOS::platformFocusRingColor const):
(WebCore::RenderThemeIOS::setFocusRingColor):
* testing/Internals.cpp:
(WebCore::Internals::focusRingColor):
* testing/Internals.h:
* testing/Internals.idl:

Source/WebKit:

<rdar://problem/58074291>

Reviewed by Brent Fulgham.

When support for the html attachment element is enabled, issue a mach lookup extension to the frontboard and icon service
for the WebContent process, since these daemons are being contacted when icons for attachments are being queried. Also,
retrieve the focus ring color in the UI process, since getting this color requires access to the frontboard daemon.

Test: fast/sandbox/ios/sandbox-mach-lookup-attachment-element.html

* Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb:
* Shared/WebProcessCreationParameters.cpp:
(WebKit::WebProcessCreationParameters::encode const):
(WebKit::WebProcessCreationParameters::decode):
* Shared/WebProcessCreationParameters.h:
* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess):
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeWebProcess):

LayoutTests:

Reviewed by Brent Fulgham.

* fast/sandbox/ios/focus-ring-color-expected.txt: Added.
* fast/sandbox/ios/focus-ring-color.html: Added.
* fast/sandbox/ios/sandbox-mach-lookup-attachment-element-expected.txt: Added.
* fast/sandbox/ios/sandbox-mach-lookup-attachment-element.html: Added.


Canonical link: https://commits.webkit.org/220029@main
git-svn-id: htt

--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,27 @@
+2020-01-30  Per Arne Vollan  <pvollan@apple.com>
+
+        [iOS] Issue mach sandbox extension to the frontboard and icon service when the attachment element is enabled
+        https://bugs.webkit.org/show_bug.cgi?id=205443
+        <rdar://problem/58074291>
+
+        Reviewed by Brent Fulgham.
+
+        When support for the html attachment element is enabled, issue a mach lookup extension to the frontboard and icon service
+        for the WebContent process, since these daemons are being contacted when icons for attachments are being queried. Also,
+        retrieve the focus ring color in the UI process, since getting this color requires access to the frontboard daemon.
+
+        Test: fast/sandbox/ios/sandbox-mach-lookup-attachment-element.html
+
+        * Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb:
+        * Shared/WebProcessCreationParameters.cpp:
+        (WebKit::WebProcessCreationParameters::encode const):
+        (WebKit::WebProcessCreationParameters::decode):
+        * Shared/WebProcessCreationParameters.h:
+        * UIProcess/Cocoa/WebProcessPoolCocoa.mm:
+        (WebKit::WebProcessPool::platformInitializeWebProcess):
+        * WebProcess/cocoa/WebProcessCocoa.mm:
+        (WebKit::WebProcess::platformInitializeWebProcess):
+
 2020-01-30  Tim Horton  <timothy_horton@apple.com>
 
         REGRESSION (r253267): Swipe from edge on Twitter images no longer goes back
