--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,15 @@
+2020-01-30  Per Arne Vollan  <pvollan@apple.com>
+
+        [iOS] Issue mach sandbox extension to the frontboard and icon service when the attachment element is enabled
+        https://bugs.webkit.org/show_bug.cgi?id=205443
+
+        Reviewed by Brent Fulgham.
+
+        * fast/sandbox/ios/focus-ring-color-expected.txt: Added.
+        * fast/sandbox/ios/focus-ring-color.html: Added.
+        * fast/sandbox/ios/sandbox-mach-lookup-attachment-element-expected.txt: Added.
+        * fast/sandbox/ios/sandbox-mach-lookup-attachment-element.html: Added.
+
 2020-01-30  Alexey Shvayka  <shvaikalesh@gmail.com>
 
         Incomplete braced quantifiers should be banned in Unicode patterns only
