--- a/Source/JavaScriptCore/ChangeLog
+++ b/Source/JavaScriptCore/ChangeLog
@@ -1,5 +1,14 @@
 2020-01-30  Yusuke Suzuki  <ysuzuki@apple.com>
 
+        [WTF] Remove PackedIntVector
+        https://bugs.webkit.org/show_bug.cgi?id=207018
+
+        Reviewed by Mark Lam.
+
+        * bytecode/BytecodeBasicBlock.h:
+
+2020-01-30  Yusuke Suzuki  <ysuzuki@apple.com>
+
         [JSC] Remove unnecessary allocations in BytecodeBasicBlock
         https://bugs.webkit.org/show_bug.cgi?id=206986
 
